--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "nodemon": "^1.18.6",
-    "prettier-eslint": "^8.8.2"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.7",
+    "prettier-eslint": "^8.8.2",
+    "supertest": "^3.3.0"
   }
 }
