Remove react eslint plugins

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,8 @@
 {
-    "parser": "babel-eslint",
-    "extends": ["airbnb"],
-    "env": {
-      "node": true,
-      "es6": true,
-      "jest": true
-    }
+  "extends": ["airbnb-base"],
+  "env": {
+    "node": true,
+    "es6": true,
+    "jest": true
   }
-  
+}
