--- a/package.json
+++ b/package.json
@@ -17,12 +17,9 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
     "prettier-eslint": "^8.8.2",
