--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "librarycapacitybackend",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "^8.0.0",
+    "npm": "^5.0.0"
+  },
   "scripts": {
     "start": "NODE_ENV=production node ./bin/www",
     "dev": "NODE_ENV=development nodemon ./bin/www",
