--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "dotenv": "^6.2.0",
     "express": "~4.16.0",
     "helmet": "^3.15.0",
     "http-errors": "~1.6.2",
+    "mongoose": "^5.4.14",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "nodemon": "^1.18.7",
     "prettier-eslint": "^8.8.2",
     "supertest": "^3.3.0"
