--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "helmet": "^3.15.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.14",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "node-cache": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
